# parallel_pwmig

./: .gitignore  Dockerfile  Dockerfile_dev  README.md  setup.py
.github/workflows/: docker-publish.yml
cxx/: CMakeLists.txt
cxx/cmake/: gsl-download.cmake
cxx/include/: CMakeLists.txt
cxx/include/misc/: CMakeLists.txt
cxx/include/pwmig/: CMakeLists.txt
cxx/include/pwmig/dsap/: CMakeLists.txt  coords.h  deviants.h  deviants_include.h  elog.h  stock.h
cxx/include/pwmig/gclgrid/: CMakeLists.txt  GCLMasked.h  GCLgridError.h  PWMIGfielddata.h  RegionalCoordinates.h  gclgrid.h  gclgrid_subs.h  swapbytes_pwmig.h
cxx/include/pwmig/pwmigcore/: CMakeLists.txt  DepthDependentAperture.h  PWMIGmigrated_seismogram.h  PwmigFileHandle.h  Ray_Transformation_Operator.h  RectangularSlownessGrid.h  SlownessVectorMatrix.h  pwmig.h  pwstack.h
cxx/include/pwmig/seispp/: CMakeLists.txt  EventCatalog.h  Hypocenter.h  RadialGrid.h  SeisppKeywords.h  Stack.h  VelocityModel_1d.h  interpolator1d.h  ray1d.h
cxx/include/pwmig/utility/: CMakeLists.txt  EventCatalog.h  Hypocenter.h  coords.h  gclgrid.h  stock.h  swapbytes_pwmig.h
cxx/python/: CMakeLists.txt
cxx/python/gclgrid/: CMakeLists.txt  gclgrid_py.cc
cxx/python/pwmigcore/: CMakeLists.txt  pwmigcore_py.cc
cxx/python/seispp/: CMakeLists.txt  seispp_py.cc
cxx/src/lib/: CMakeLists.txt
cxx/src/lib/coords/: CMakeLists.txt  dist.3  dr3mag.c  dr3mxv.c  dr3sxv.c  dsphcar.c
cxx/src/lib/dsap/: CMakeLists.txt  datafile.3  datafile.c  dcarsph.c  dist.c  dr3add.c  dr3cros.c  dr3dot.c  dr3norm.c  dr3sub.c  dsphcar.c  h2e.c  rotate.c  str2epoch.c  strings.c  wd.c
cxx/src/lib/gclgrid/: CMakeLists.txt  GCLMasked.cc  PWMIGfielddata.cc  RegionalCoordinates.cc  converters.cc  create_destroy.cc  decimate.cc  dx_output.cc  ellipsoid.cc  extract_component.cc  extract_gridline.cc  fileoutput.cc  flatten.cc  fme_weights.f  initialize1d.cc  interpolate.cc  lookup.cc  operators.cc  pathintegral.cc  python_interface.cc  remapgrid.cc  swap.cc  tapergrid.cc  ustrans.cc  zero.cc
cxx/src/lib/pwmigcore/: CMakeLists.txt  DepthDependentAperture.cc  PWMIGmigrated_seismogram.cc  PwmigFileHandle.cc  RectangularSlownessGrid.cc  SlownessVectorMatrix.cc  decimate.cc  migrate_component_omp.cc  migrate_one_seismogram.cc  pwmig_multithread_functions.cc  pwmigsubs.cc  pwstack_ensemble.cc  ray_transformation_operator.cc  raygrid.cc
cxx/src/lib/seispp/: CMakeLists.txt  EventCatalog.cc  Hypocenter.cc  RadialGrid.cc  Stack.cc  VelocityModel_1d.cc  interpolator1d.cc  ray1d.cc
cxx/src/lib/stock/: CMakeLists.txt  datafile.c  elog.3  epoch.c  makedir.3  now.c  swap.cc  time.c  time_util.c
cxx/src/lib/utility/: CMakeLists.txt
cxx/src/lib/utility/gclgrid/: converters.cc  create_destroy.cc  decimate.cc  dx_output.cc  ellipsoid.cc  extract_component.cc  extract_gridline.cc  fileoutput.cc  flatten.cc  initialize1d.cc  interpolate.cc  lookup.cc  operators.cc  pathintegral.cc  tapergrid.cc  ustrans.cc  zero.cc
cxx/src/lib/utility/seispp/: EventCatalog.cc  Hypocenter.cc  interpolator1d.cc
cxx/src/pwmigcore/gridstacker/: gridstacker.cc
cxx/src/pwmigcore/pwmig/: PWMIG_migrated_seismogram.cc  decimate.cc  mdutils.cc  migrate_one_seismogram.cc  pwmig.cc  pwmig.py  ray_transformation_operator.cc  raygrid.cc
cxx/src/pwmigcore/pwstack/: pwstack_process.cc  pwstack_reader.cc
data/pf/: AntelopeDatabase.pf  extract_section.pf  telecluster.pf
docs/design/: RFeventstacker.rst  libgclgrid.rst  makegclgrid.rst  overview.rst  pwmig.rst  pwstack.rst  telecluster.rst
docs/notes/: conversion_notes.ipynb
python/dataprep/: telecluster.pf  telecluster.py
python/db/: database.py
python/paraview/: vtk_converters.py
python/pwmig/: pwmig.py  pwstack.py
python/pwmigpy/dataprep/: telecluster.py
python/pwmigpy/dataprep/scripts/: makegclgrid.py  project1dmod  project1dmod.py
python/pwmigpy/db/: database.py  datascope.py  dbview2collection.py
python/pwmigpy/db/pf/: AntelopeDatabase.pf  makegclgrid_ak135.pf
python/pwmigpy/db/script/: dbview2collection.py  makegclgrid.py  project1dmod.py
python/pwmigpy/paraview/: netcdf_reader.py  vtk_converters.py
python/pwmigpy/pwmig/: pwmig.py  pwmig_serial.py  pwstack.py  pwstack_serial.py
python/pwmigpy/utility/: earthmodels.py  gclgrid.py
python/tests/: test_gclgrid.py
scripts/: pwmig_distributed_node.sh
